--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
-<app-content-wrapper></app-content-wrapper>
+<!-- <app-content-wrapper></app-content-wrapper> -->
+<app-header></app-header>
+<router-outlet></router-outlet>
