--- a/src/app/content-wrapper/content-wrapper.component.html
+++ b/src/app/content-wrapper/content-wrapper.component.html
@@ -1,6 +1,6 @@
 <div class="relative" appWindowsHeight [style.height.px]="myInnerHeight">
-  <div class="margintop120 visible-xs"></div>
-  <div class="margintop120 hidden-sm"></div>
+  <div class="margintop100 visible-xs"></div>
+  <div class="margintop120 hidden-xs"></div>
   <app-header></app-header>
   <router-outlet></router-outlet>
 </div>
