--- a/src/app/shared/detail-button/detail-button.component.html
+++ b/src/app/shared/detail-button/detail-button.component.html
@@ -1,5 +1,5 @@
 <a mat-raised-button 
-  (click)="handleDetail(); openSnackBar()" 
-  class="button button-secondary">
+  (click)=" openSnackBar(); onAnimate()"
+  class="button button-secondary" [@divState]='state'>
     Details
 </a>
