--- a/src/app/views/open-loans/open-loans.component.html
+++ b/src/app/views/open-loans/open-loans.component.html
@@ -9,7 +9,7 @@
     </div>
 
     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 card-col" 
-    *ngFor='let loan of loans; let i of index' [@divState]='state'>
+    *ngFor='let loan of loans; let i of index'>
 
       <div class="card-container">
         <app-loan-avatar [loan]=loan [short]=true></app-loan-avatar>
