--- a/src/app/shared/detail-button/detail-button.component.html
+++ b/src/app/shared/detail-button/detail-button.component.html
@@ -1,5 +1,5 @@
 <a mat-raised-button 
-  (click)="onAnimate()"
+  (click)="handleDetail(); openSnackBar(); onAnimate()"
   class="button button-secondary" [@divState]='state'>
     Details
 </a>
