--- a/src/app/views/open-loans/open-loans.component.html
+++ b/src/app/views/open-loans/open-loans.component.html
@@ -45,7 +45,7 @@
           </div>
           
           <app-lend-button [loan]=loan></app-lend-button>
-          <app-detail-button [loan]=loan></app-detail-button>
+          <app-detail-button [loan]=loan [master]=master></app-detail-button>
         </div>
       </div>
     </div>
