--- a/src/app/shared/transfer-form/transfer-form.component.html
+++ b/src/app/shared/transfer-form/transfer-form.component.html
@@ -2,7 +2,7 @@
   <form (submit)="onSubmit($event, address)">
     <div class="col-xs-12">
       <div class="margintop10"></div>
-      <mat-form-field>
+      <mat-form-field style="height: 65px">
         <input type="text" name="eth_address" placeholder="Recipient address" ngModel matInput #address>
         <mat-hint>Remember that transferring a Loan is an irreversible operation. Please check the address carefully</mat-hint>
         <mat-error *ngIf="invalidAddress">This is not a valid address</mat-error>
