Folder structure optimazed

--- a/src/app/dialogs/dialog-client-account/dialog-client-account.component.html
+++ b/src/app/dialogs/dialog-client-account/dialog-client-account.component.html
@@ -10,7 +10,7 @@
     <div class="title main-h4">We remend you to operate with:</div>
     <div class="row img-container">
       <div class='col-xs-12'>
-        <img src="../../../assets/metamask.png" alt="ether-client">
+        <img src="../../../assets/img/metamask.png" alt="ether-client">
         <div class="title main-h1 margintop10">Metamask</div>
         <a mat-raised-button href="https://metamask.io/"  target="_blank" class="button button-primary margintop20">GET</a>
       </div>
