--- a/src/app/not-found/not-found.component.scss
+++ b/src/app/not-found/not-found.component.scss
@@ -23,7 +23,7 @@
 .img-container{
   width: 100%;
   height: 100%;
-  background-image: url(../../assets/404-tree.svg);
+  background-image: url(../../assets/img/404-tree.svg);
   background-repeat: no-repeat;
   background-position: center center;
   @include background-size(cover);
